--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "deploy": "gh-pages -d build",
-    "predeploy": "yarn run build"
+    "predeploy": "yarn build"
   },
   "eslintConfig": {
     "extends": "react-app"
